# beamprop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  wheels.yml
beamprop-py/: Cargo.toml  build.rs  pyproject.toml
beamprop-py/src/: lib.rs
beamprop-py/tests/: conftest.py  test_gates.py
data/: air_properties.json  air_properties.npy
docs/: M4_SPEC.md  M5_SPEC.md  MODELS.md
scripts/: make_air_table.py  render.py  sweep_blooming.py
src/: airprops.rs  blooming.rs  cases.rs  field.rs  grid.rs  lib.rs  main.rs  medium.rs  montecarlo.rs  propagate.rs  turbulence.rs  validate.rs  viz.rs
tests/: blooming.rs  validation.rs
tests/data/: smith1977_F5.csv
