[package]
name = "beamprop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Open solver for laser beam propagation through the atmosphere: diffraction, attenuation, turbulence, and thermal blooming."
readme = "README.md"
keywords = ["optics", "wave-optics", "beam-propagation", "atmosphere", "physics"]
categories = ["science", "simulation"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
ndrustfft = "0.6.2"
num-complex = "0.4.6"
rand = "0.10.2"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.12.0"
rustfft = "6.4.1"
