[workspace]
members = ["beamprop-py"]

[package]
name = "beamprop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Open solver for laser beam propagation through the atmosphere: diffraction, attenuation, turbulence, and thermal blooming."
readme = "README.md"
keywords = ["optics", "wave-optics", "beam-propagation", "atmosphere", "physics"]
categories = ["science", "simulation"]

# The FFT-heavy numerics are unusable unoptimized; keep our own crate quick to
# compile but build dependencies (rustfft etc.) optimized even in dev/test.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
ndrustfft = "0.6.2"
num-complex = "0.4.6"
rand = "0.10.2"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.12.0"
rustfft = "6.4.1"
